--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Frontend_PY1_SOPES1",
+  "name": "proyecto1_201213181",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Luis Salazar",
