--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,7 +34,8 @@
     "style-loader": "^1.0.2",
     "validator": "^12.1.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "websocket-extensions": "^0.1.4"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
