--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,7 @@
     "react-modal": "^3.11.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "recharts": "^1.8.5",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.2",
     "validator": "^12.1.0",
