--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,10 +18,12 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "braces": "^3.0.2",
     "chart.js": "^2.9.4",
     "css-loader": "^3.4.0",
     "eslint-plugin-react": "^7.17.0",
     "live-server": "^1.2.1",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^16.5.0",
