--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,8 @@
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^16.5.0",
+    "react-animated-tree": "^1.0.10",
+    "react-bootstrap": "^1.4.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.14.0",
     "react-modal": "^3.11.1",
